@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@
 package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation;
 
 import java.time.Instant;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -64,7 +65,7 @@ class SessionsEndpointDocumentationTests extends MockMvcEndpointDocumentationTes
 	private static final Session sessionThree = createSession(Instant.now().minusSeconds(60 * 60 * 2),
 			Instant.now().minusSeconds(12));
 
-	private static final List<FieldDescriptor> sessionFields = List.of(
+	private static final List<FieldDescriptor> sessionFields = Arrays.asList(
 			fieldWithPath("id").description("ID of the session."),
 			fieldWithPath("attributeNames").description("Names of the attributes stored in the session."),
 			fieldWithPath("creationTime").description("Timestamp of when the session was created."),
@@ -124,7 +125,7 @@ class SessionsEndpointDocumentationTests extends MockMvcEndpointDocumentationTes
 
 		@Bean
 		SessionsEndpoint endpoint(FindByIndexNameSessionRepository<?> sessionRepository) {
-			return new SessionsEndpoint(sessionRepository, sessionRepository);
+			return new SessionsEndpoint(sessionRepository);
 		}
 
 	}
