@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -52,7 +52,6 @@ import org.springframework.web.context.WebApplicationContext;
  *
  * @author Phillip Webb
  * @author Andy Wilkinson
- * @author Moritz Halbritter
  * @since 1.4.0
  */
 public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomizer {
@@ -101,7 +100,7 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 			return null;
 		}
 		if (this.print == MockMvcPrint.LOG_DEBUG) {
-			return (LoggingLinesWriter.isDebugEnabled()) ? new LoggingLinesWriter() : null;
+			return new LoggingLinesWriter();
 		}
 		return new SystemLinesWriter(this.print);
 	}
@@ -117,8 +116,12 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 	private void addFilter(ConfigurableMockMvcBuilder<?> builder, AbstractFilterRegistrationBean<?> registration) {
 		Filter filter = registration.getFilter();
 		Collection<String> urls = registration.getUrlPatterns();
-		builder.addFilter(filter, registration.getFilterName(), registration.getInitParameters(),
-				registration.determineDispatcherTypes(), StringUtils.toStringArray(urls));
+		if (urls.isEmpty()) {
+			builder.addFilters(filter);
+		}
+		else {
+			builder.addFilter(filter, StringUtils.toStringArray(urls));
+		}
 	}
 
 	public void setAddFilters(boolean addFilters) {
@@ -174,7 +177,7 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 				writer.write(((Printer) getPrinter()).getLines());
 			}
 
-			private static final class Printer implements ResultValuePrinter {
+			private static class Printer implements ResultValuePrinter {
 
 				private final List<String> lines = new ArrayList<>();
 
@@ -189,12 +192,7 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 					if (value != null && value.getClass().isArray()) {
 						value = CollectionUtils.arrayToList(value);
 					}
-					try {
-						this.lines.add("%17s = %s".formatted(label, value));
-					}
-					catch (RuntimeException ex) {
-						this.lines.add("%17s = << Exception '%s' occurred while formatting >>".formatted(label, ex));
-					}
+					this.lines.add(String.format("%17s = %s", label, value));
 				}
 
 				List<String> getLines() {
@@ -263,7 +261,7 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 	/**
 	 * {@link LinesWriter} to output results to the log.
 	 */
-	private static final class LoggingLinesWriter implements LinesWriter {
+	private static class LoggingLinesWriter implements LinesWriter {
 
 		private static final Log logger = LogFactory.getLog("org.springframework.test.web.servlet.result");
 
@@ -277,10 +275,6 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 				}
 				logger.debug("MvcResult details:\n" + stringWriter);
 			}
-		}
-
-		static boolean isDebugEnabled() {
-			return logger.isDebugEnabled();
 		}
 
 	}
@@ -324,7 +318,7 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 			addAsRegistrationBean(beanFactory, Filter.class, new FilterRegistrationBeanAdapter());
 		}
 
-		private static final class FilterRegistrationBeanAdapter implements RegistrationBeanAdapter<Filter> {
+		private static class FilterRegistrationBeanAdapter implements RegistrationBeanAdapter<Filter> {
 
 			@Override
 			public RegistrationBean createRegistrationBean(String name, Filter source, int totalNumberOfSourceBeans) {
