@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,8 +37,6 @@ import org.springframework.boot.context.config.ConfigDataEnvironmentContributors
 import org.springframework.boot.context.properties.bind.BindException;
 import org.springframework.boot.context.properties.bind.Binder;
 import org.springframework.boot.logging.DeferredLogFactory;
-import org.springframework.core.convert.ConversionService;
-import org.springframework.core.convert.support.DefaultConversionService;
 import org.springframework.core.io.DefaultResourceLoader;
 import org.springframework.core.io.support.SpringFactoriesLoader;
 import org.springframework.mock.env.MockEnvironment;
@@ -70,7 +68,9 @@ class ConfigDataEnvironmentContributorsTests {
 
 	private final DefaultBootstrapContext bootstrapContext = new DefaultBootstrapContext();
 
-	private final ConversionService conversionService = DefaultConversionService.getSharedInstance();
+	private MockEnvironment environment;
+
+	private Binder binder;
 
 	private ConfigDataImporter importer;
 
@@ -78,10 +78,10 @@ class ConfigDataEnvironmentContributorsTests {
 
 	@BeforeEach
 	void setup() {
-		MockEnvironment environment = new MockEnvironment();
-		Binder binder = Binder.get(environment);
+		this.environment = new MockEnvironment();
+		this.binder = Binder.get(this.environment);
 		ConfigDataLocationResolvers resolvers = new ConfigDataLocationResolvers(this.logFactory, this.bootstrapContext,
-				binder, new DefaultResourceLoader(getClass().getClassLoader()),
+				this.binder, new DefaultResourceLoader(getClass().getClassLoader()),
 				SpringFactoriesLoader.forDefaultResourceLocation(getClass().getClassLoader()));
 		ConfigDataLoaders loaders = new ConfigDataLoaders(this.logFactory, this.bootstrapContext,
 				SpringFactoriesLoader.forDefaultResourceLocation());
@@ -91,10 +91,9 @@ class ConfigDataEnvironmentContributorsTests {
 
 	@Test
 	void createCreatesWithInitialContributors() {
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, List.of(contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(contributor));
 		Iterator<ConfigDataEnvironmentContributor> iterator = contributors.iterator();
 		assertThat(iterator.next()).isSameAs(contributor);
 		assertThat(iterator.next().getKind()).isEqualTo(Kind.ROOT);
@@ -103,9 +102,9 @@ class ConfigDataEnvironmentContributorsTests {
 	@Test
 	void withProcessedImportsWhenHasNoUnprocessedImportsReturnsSameInstance() {
 		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor
-			.ofExisting(new MockPropertySource(), this.conversionService);
+			.ofExisting(new MockPropertySource());
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, List.of(contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(contributor));
 		ConfigDataEnvironmentContributors withProcessedImports = contributors.withProcessedImports(this.importer,
 				this.activationContext);
 		assertThat(withProcessedImports).isSameAs(contributors);
@@ -114,17 +113,16 @@ class ConfigDataEnvironmentContributorsTests {
 	@Test
 	void withProcessedImportsResolvesAndLoads() {
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> locations = Collections.singletonList(LOCATION_1);
+		List<ConfigDataLocation> locations = Arrays.asList(LOCATION_1);
 		MockPropertySource propertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> imported = new LinkedHashMap<>();
 		imported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a"), false),
-				new ConfigData(List.of(propertySource)));
+				new ConfigData(Arrays.asList(propertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(locations)))
 			.willReturn(imported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, List.of(contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(contributor));
 		ConfigDataEnvironmentContributors withProcessedImports = contributors.withProcessedImports(this.importer,
 				this.activationContext);
 		Iterator<ConfigDataEnvironmentContributor> iterator = withProcessedImports.iterator();
@@ -137,25 +135,24 @@ class ConfigDataEnvironmentContributorsTests {
 	@Test
 	void withProcessedImportsResolvesAndLoadsChainedImports() {
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> initialLocations = Collections.singletonList(LOCATION_1);
+		List<ConfigDataLocation> initialLocations = Arrays.asList(LOCATION_1);
 		MockPropertySource initialPropertySource = new MockPropertySource();
 		initialPropertySource.setProperty("spring.config.import", "location2");
 		Map<ConfigDataResolutionResult, ConfigData> initialImported = new LinkedHashMap<>();
 		initialImported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a"), false),
-				new ConfigData(List.of(initialPropertySource)));
+				new ConfigData(Arrays.asList(initialPropertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(initialLocations)))
 			.willReturn(initialImported);
-		List<ConfigDataLocation> secondLocations = Collections.singletonList(LOCATION_2);
+		List<ConfigDataLocation> secondLocations = Arrays.asList(LOCATION_2);
 		MockPropertySource secondPropertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> secondImported = new LinkedHashMap<>();
 		secondImported.put(new ConfigDataResolutionResult(LOCATION_2, new TestConfigDataResource("b"), false),
-				new ConfigData(List.of(secondPropertySource)));
+				new ConfigData(Arrays.asList(secondPropertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(secondLocations)))
 			.willReturn(secondImported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, List.of(contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(contributor));
 		ConfigDataEnvironmentContributors withProcessedImports = contributors.withProcessedImports(this.importer,
 				this.activationContext);
 		Iterator<ConfigDataEnvironmentContributor> iterator = withProcessedImports.iterator();
@@ -171,19 +168,18 @@ class ConfigDataEnvironmentContributorsTests {
 		MockPropertySource existingPropertySource = new MockPropertySource();
 		existingPropertySource.setProperty("test", "springboot");
 		ConfigDataEnvironmentContributor existingContributor = ConfigDataEnvironmentContributor
-			.ofExisting(existingPropertySource, this.conversionService);
+			.ofExisting(existingPropertySource);
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> locations = Collections.singletonList(LOCATION_1);
+		List<ConfigDataLocation> locations = Arrays.asList(LOCATION_1);
 		MockPropertySource propertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> imported = new LinkedHashMap<>();
 		imported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a'"), false),
-				new ConfigData(List.of(propertySource)));
+				new ConfigData(Arrays.asList(propertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(locations)))
 			.willReturn(imported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(existingContributor, contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(existingContributor, contributor));
 		contributors.withProcessedImports(this.importer, this.activationContext);
 		then(this.importer).should()
 			.resolveAndLoad(any(),
@@ -195,25 +191,24 @@ class ConfigDataEnvironmentContributorsTests {
 	@Test
 	void withProcessedImportsProvidesLocationResolverContextWithAccessToParent() {
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> initialLocations = Collections.singletonList(LOCATION_1);
+		List<ConfigDataLocation> initialLocations = Arrays.asList(LOCATION_1);
 		MockPropertySource initialPropertySource = new MockPropertySource();
 		initialPropertySource.setProperty("spring.config.import", "location2");
 		Map<ConfigDataResolutionResult, ConfigData> initialImported = new LinkedHashMap<>();
 		initialImported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a"), false),
-				new ConfigData(List.of(initialPropertySource)));
+				new ConfigData(Arrays.asList(initialPropertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(initialLocations)))
 			.willReturn(initialImported);
-		List<ConfigDataLocation> secondLocations = Collections.singletonList(LOCATION_2);
+		List<ConfigDataLocation> secondLocations = Arrays.asList(LOCATION_2);
 		MockPropertySource secondPropertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> secondImported = new LinkedHashMap<>();
 		secondImported.put(new ConfigDataResolutionResult(LOCATION_2, new TestConfigDataResource("b"), false),
-				new ConfigData(List.of(secondPropertySource)));
+				new ConfigData(Arrays.asList(secondPropertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(secondLocations)))
 			.willReturn(secondImported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, List.of(contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(contributor));
 		ArgumentCaptor<ConfigDataLocationResolverContext> locationResolverContext = ArgumentCaptor
 			.forClass(ConfigDataLocationResolverContext.class);
 		contributors.withProcessedImports(this.importer, this.activationContext);
@@ -228,19 +223,18 @@ class ConfigDataEnvironmentContributorsTests {
 		MockPropertySource existingPropertySource = new MockPropertySource();
 		existingPropertySource.setProperty("test", "springboot");
 		ConfigDataEnvironmentContributor existingContributor = ConfigDataEnvironmentContributor
-			.ofExisting(existingPropertySource, this.conversionService);
+			.ofExisting(existingPropertySource);
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> locations = Collections.singletonList(LOCATION_1);
+		List<ConfigDataLocation> locations = Arrays.asList(LOCATION_1);
 		MockPropertySource propertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> imported = new LinkedHashMap<>();
 		imported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a'"), false),
-				new ConfigData(List.of(propertySource)));
+				new ConfigData(Arrays.asList(propertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(locations)))
 			.willReturn(imported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(existingContributor, contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(existingContributor, contributor));
 		contributors.withProcessedImports(this.importer, this.activationContext);
 		then(this.importer).should()
 			.resolveAndLoad(any(),
@@ -253,19 +247,18 @@ class ConfigDataEnvironmentContributorsTests {
 		MockPropertySource existingPropertySource = new MockPropertySource();
 		existingPropertySource.setProperty("test", "springboot");
 		ConfigDataEnvironmentContributor existingContributor = ConfigDataEnvironmentContributor
-			.ofExisting(existingPropertySource, this.conversionService);
+			.ofExisting(existingPropertySource);
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> locations = Collections.singletonList(LOCATION_1);
+		List<ConfigDataLocation> locations = Arrays.asList(LOCATION_1);
 		MockPropertySource propertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> imported = new LinkedHashMap<>();
 		imported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a'"), false),
-				new ConfigData(List.of(propertySource)));
+				new ConfigData(Arrays.asList(propertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(locations)))
 			.willReturn(imported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(existingContributor, contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(existingContributor, contributor));
 		contributors.withProcessedImports(this.importer, this.activationContext);
 		then(this.importer).should()
 			.resolveAndLoad(any(), any(),
@@ -277,10 +270,9 @@ class ConfigDataEnvironmentContributorsTests {
 	void getBinderProvidesBinder() {
 		MockPropertySource propertySource = new MockPropertySource();
 		propertySource.setProperty("test", "springboot");
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofExisting(propertySource,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofExisting(propertySource);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, List.of(contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(contributor));
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("springboot");
 	}
@@ -295,7 +287,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("one");
 	}
@@ -311,7 +303,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("two");
 	}
@@ -321,10 +313,9 @@ class ConfigDataEnvironmentContributorsTests {
 		MockPropertySource propertySource = new MockPropertySource();
 		propertySource.setProperty("test", "${other}");
 		propertySource.setProperty("other", "springboot");
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofExisting(propertySource,
-				this.conversionService);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofExisting(propertySource);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, List.of(contributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(contributor));
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("springboot");
 	}
@@ -341,7 +332,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("two");
 	}
@@ -357,7 +348,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
 		Binder binder = contributors.getBinder(this.activationContext, BinderOption.FAIL_ON_BIND_TO_INACTIVE_SOURCE);
 		assertThatExceptionOfType(BindException.class).isThrownBy(() -> binder.bind("test", String.class))
 			.satisfies((ex) -> assertThat(ex.getCause()).isInstanceOf(InactiveConfigDataAccessException.class));
@@ -374,7 +365,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
 		Binder binder = contributors.getBinder(this.activationContext, BinderOption.FAIL_ON_BIND_TO_INACTIVE_SOURCE);
 		assertThatExceptionOfType(BindException.class).isThrownBy(() -> binder.bind("test", String.class))
 			.satisfies((ex) -> assertThat(ex.getCause()).isInstanceOf(InactiveConfigDataAccessException.class));
@@ -392,7 +383,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
 		Binder binder = contributors.getBinder(this.activationContext, BinderOption.FAIL_ON_BIND_TO_INACTIVE_SOURCE);
 		assertThatExceptionOfType(BindException.class).isThrownBy(() -> binder.bind("test", String.class))
 			.satisfies((ex) -> assertThat(ex.getCause()).isInstanceOf(InactiveConfigDataAccessException.class));
@@ -401,7 +392,7 @@ class ConfigDataEnvironmentContributorsTests {
 	private ConfigDataEnvironmentContributor createBoundImportContributor(ConfigData configData,
 			int propertySourceIndex) {
 		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofUnboundImport(null, null,
-				false, configData, propertySourceIndex, this.conversionService);
+				false, configData, propertySourceIndex);
 		return contributor.withBoundProperties(Collections.singleton(contributor), null);
 	}
 
